Fix logo on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -573,12 +573,15 @@ footer {
 
     .btn {
         margin: 0 auto;
-        width: 200px;
         justify-content: center;
     }
     
     .h1 {
-        font-size: 32px;
+        font-size: 28px;
+    }
+
+    .logo-title {
+        width: 250px;
     }
     
     .hero {
